--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-vulcanize": "^6.0.0",
-    "run-sequence": "^1.1.0"
+    "run-sequence": "^1.1.0",
+    "yargs": "^3.9.0"
   }
 }
