--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "PAIO co.,ltd. <apple@paio.co.kr> (http://www.paio.co.kr)",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^3.1.3",
     "babelify": "^6.1.0",
     "browser-sync": "^2.7.1",
     "es6ify": "^1.6.0",
