--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-vulcanize": "^6.0.0",
     "run-sequence": "^1.1.0",
+    "web-component-tester": "^3.1.3",
     "yargs": "^3.9.0"
   }
 }
