--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-html-minifier": "^0.1.6",
     "gulp-if": "^1.2.5",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.1.1",
     "gulp-plumber": "^1.0.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
