--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "annotate-drawing",
+  "name": "es6-webcomponents-template",
   "version": "0.0.1",
   "authors": [
     "PAIO co.,ltd.<apple@paio.co.kr>"
