--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "annotate-drawing",
+  "name": "es6-webcomponents-template",
   "version": "0.0.1",
-  "description": "annotate drawing",
+  "description": "es6 web components template",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,12 +12,14 @@
     "babel-eslint": "^3.1.3",
     "babelify": "^6.1.0",
     "browser-sync": "^2.7.1",
+    "chalk": "^1.0.0",
     "es6ify": "^1.6.0",
     "eslint": "^0.21.0",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
     "gulp-eslint": "^0.12.0",
+    "gulp-filter": "^2.0.2",
     "gulp-html-minifier": "^0.1.6",
     "gulp-if": "^1.2.5",
     "gulp-load-plugins": "^0.10.0",
