--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-filter": "^2.0.2",
     "gulp-html-minifier": "^0.1.6",
     "gulp-if": "^1.2.5",
+    "gulp-inject": "^1.2.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.1",
     "gulp-plumber": "^1.0.0",
