--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "es6ify": "^1.6.0",
     "eslint": "^0.21.0",
     "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
     "gulp-eslint": "^0.12.0",
@@ -27,6 +28,7 @@
     "gulp-minify-css": "^1.1.1",
     "gulp-plumber": "^1.0.0",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-traceur": "^0.17.1",
     "gulp-uglify": "^1.2.0",
     "gulp-vulcanize": "^6.0.0",
     "run-sequence": "^1.1.0",
