--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "PAIO co.,ltd. <apple@paio.co.kr> (http://www.paio.co.kr)",
+  "homepage": "http://www.example.com",
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^3.1.3",
