--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-eslint": "^3.1.3",
     "browser-sync": "^2.7.1",
     "chalk": "^1.0.0",
+    "cordova-android": "^4.0.2",
+    "cordova-lib": "^5.0.0",
     "eslint": "^0.21.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
