--- a/appconfig.json
+++ b/appconfig.json
@@ -1,10 +1,20 @@
 {
-  "version":            "0.26.1",
   "name":               "AwsomeApp",
   "app-bundle-id":      "com.example.awesomeapp",
   "helper-bundle-id":   "com.example.awesomeapp.helper",
   "app-version":        "0.0.1",
-  "main":               "src/main.js",
-  "protocols":          null,
-  "icon":               null
+  "icon":               null,
+  "cordova":            {
+    "plugins":            [
+      "com.tokbox.cordova.opentok",
+      "org.apache.cordova.console",
+      "https://github.com/apache/cordova-plugin-whitelist.git"
+    ],
+    "index":              "index.html"
+  },
+  "electron":           {
+    "version":            "0.26.1",
+    "protocols":          null,
+    "main":               "src/main.js"
+  }
 }
